--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Select an Activity</title>
 
-  <!-- Firebase Configuration and Initialization -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -36,21 +36,21 @@
       touch-action: manipulation;
     }
 
-    /* ====== Login - mesmo estilo aprovado ====== */
+    /* ====== Login (bonequinha + nome + dropdown) ====== */
     .login-container {
-      position: absolute;
-      top: 16px;
-      right: 14px;
-      z-index: 9999;
+      position: fixed;
+      top: 12px;
+      right: 16px;
+      z-index: 10000;
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 4px;
+      cursor: pointer;
       background: none;
       border: none;
       box-shadow: none;
       padding: 0;
-      cursor: pointer;
     }
 
     .user-icon {
@@ -58,10 +58,8 @@
       height: auto;
       display: block;
       border: none;
-      box-shadow: none;
       border-radius: 0;
       object-fit: contain;
-      pointer-events: none;
     }
 
     .user-name {
@@ -72,13 +70,12 @@
       font-weight: 700;
       color: #1a5f34;
       white-space: nowrap;
-      max-width: 180px;
+      max-width: 150px;
       overflow: hidden;
       text-overflow: ellipsis;
       text-shadow: 0 1px 1px rgba(255,255,255,0.45), 0 1px 2px rgba(0,0,0,0.18);
     }
 
-    /* Dropdown com conteúdo original */
     .user-dropdown {
       display: none;
       flex-direction: column;
@@ -87,23 +84,24 @@
       right: 0;
       background-color: #fff;
       border: 1px solid #ccc;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
       border-radius: 8px;
-      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
       z-index: 9999;
+      overflow: hidden;
+      min-width: 180px;
     }
 
-    .user-dropdown .dropdown-item {
+    .dropdown-item {
       padding: 10px 20px;
       color: #333;
       text-decoration: none;
+      font-size: 14px;
     }
-
-    .user-dropdown .dropdown-item:hover {
+    .dropdown-item:hover {
       background-color: #f0f0f0;
     }
 
-    /* ====== Layout geral ====== */
+    /* ====== Estrutura geral ====== */
     .map-container {
       width: 100%;
       position: relative;
@@ -119,9 +117,9 @@
     header {
       width: 100%;
       padding: 10px 0;
-      z-index: 10;
       text-align: center;
       background: none;
+      margin-top: 60px; /* espaço p/ avatar */
     }
 
     header h1 {
@@ -148,11 +146,8 @@
       width: fit-content;
     }
 
-    .back-button:hover {
-      background-color: #333333;
-    }
+    .back-button:hover { background-color: #333333; }
 
-    /* ====== Atividades ====== */
     .activity-buttons {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -231,7 +226,7 @@
 </head>
 
 <body>
-  <!-- Login (bonequinha + nome + dropdown) -->
+  <!-- Login -->
   <div id="loginContainer" class="login-container">
     <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
     <div id="userDropdown" class="user-dropdown"></div>
@@ -260,7 +255,6 @@
     const unit  = pathParts[2] || "Unit1";
     const container = document.getElementById("activity-buttons");
 
-    // Botão Hannah Video
     const hannahVideo = document.createElement("a");
     hannahVideo.href = `/Atividades/HannahVideo/index.html?level=${level}&unit=${unit}`;
     hannahVideo.className = "activity-button hannah-video";
@@ -271,7 +265,6 @@
     const teacherEl = container.querySelector(".teacher-resources");
     if (teacherEl) teacherEl.insertAdjacentElement("afterend", hannahVideo);
 
-    // Botões padrão
     const buttonData = [
       { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Listening" },
       { trecho: "trecho2", img: "../../imagens/grammar.png", alt: "Grammar" },
@@ -280,7 +273,6 @@
       { trecho: "trecho5", img: "../../imagens/Bible.png", alt: "Bible" },
       { trecho: "trecho6", img: "../../imagens/test.png", alt: "Test" }
     ];
-
     buttonData.forEach(data => {
       const a = document.createElement("a");
       a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
@@ -292,7 +284,6 @@
       container.appendChild(a);
     });
 
-    // Botão Robô Lex
     const robotButton = document.createElement("a");
     robotButton.href = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
     robotButton.className = "activity-button robot-lex";
@@ -302,10 +293,8 @@
     robotButton.appendChild(robotImg);
     container.appendChild(robotButton);
   });
-  </script>
 
-  <script>
-  // === Login com bonequinha e dropdown ===
+  // === Login (bonequinha + nome + dropdown funcional) ===
   firebase.auth().onAuthStateChanged(async (user) => {
     const loginLink = document.getElementById("loginLink");
     const userDropdown = document.getElementById("userDropdown");
@@ -329,16 +318,30 @@
       const p = document.createElement("p");
       p.className = "user-name";
       p.textContent = displayName;
-
       loginLink.append(img, p);
+
+      // Conteúdo do dropdown
+      userDropdown.innerHTML = `
+        <a href="../painel_aluno.html" class="dropdown-item">🧭 Student Dashboard</a>
+        <a href="../index.html" class="dropdown-item">🔁 Select a New Level</a>
+        <a href="../index.html" class="dropdown-item">🔄 Select a New Unit</a>
+        <a href="#" id="logout" class="dropdown-item">🚪 Leave</a>
+      `;
 
       // Toggle dropdown
       loginLink.onclick = (e) => {
         e.preventDefault();
         userDropdown.style.display = userDropdown.style.display === "flex" ? "none" : "flex";
       };
+
       window.addEventListener("click", (e) => {
         if (!loginLink.contains(e.target)) userDropdown.style.display = "none";
+      });
+
+      document.addEventListener("click", (e) => {
+        if (e.target.id === "logout") {
+          firebase.auth().signOut().then(() => location.reload());
+        }
       });
     } else {
       loginLink.textContent = "Login";
@@ -357,8 +360,6 @@
           const tr = document.querySelector(".teacher-resources");
           if (tr) tr.style.display = "flex";
         }
-      }).catch((error) => {
-        console.error("Erro ao obter o role do usuário:", error);
       });
     }
   });
