--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -30,78 +30,75 @@
       width: 100%;
       min-height: 100svh;
       background: url('../../imagens/fundo.png') repeat;
-      font-family: Arial, sans-serif;
+      font-family: "Times New Roman", Times, serif;
       -webkit-user-select: none;
       user-select: none;
       touch-action: manipulation;
     }
 
-    /* ====== Login (bonequinha + nome + dropdown) ====== */
+    /* ====== Barra superior: Back (esq) + Avatar+Nome (dir) ====== */
+    .topbar {
+      position: relative;
+      width: 100%;
+      height: 72px; /* define uma faixa fixa para acomodar avatar+nome e o back */
+    }
+    .back-button {
+      position: absolute;
+      top: 16px; left: 16px;
+      text-decoration: none;
+      background-color: #000;
+      color: #fff;
+      padding: 8px 12px;
+      border-radius: 4px;
+      z-index: 9999;
+    }
+    .back-button:hover { background-color: #333; }
+
+    /* Avatar + nome (sem caixa) fixo no topo (absolute, não fixed) */
     .login-container {
-      position: fixed;
-      top: 12px;
-      right: 16px;
-      z-index: 10000;
+      position: absolute;
+      top: 12px; right: 14px;
+      z-index: 9999;
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 4px;
+      background: none; border: none; box-shadow: none; padding: 0;
       cursor: pointer;
-      background: none;
-      border: none;
-      box-shadow: none;
-      padding: 0;
     }
-
     .user-icon {
-      width: 55px;
-      height: auto;
-      display: block;
-      border: none;
-      border-radius: 0;
-      object-fit: contain;
+      width: 55px; height: auto; display: block;
+      border: none; border-radius: 0; object-fit: contain;
+      pointer-events: none;
     }
-
     .user-name {
-      margin: 0;
-      line-height: 1.05;
-      text-align: center;
-      font-size: 13px;
-      font-weight: 700;
-      color: #1a5f34;
-      white-space: nowrap;
-      max-width: 150px;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      margin: 0; line-height: 1.05; text-align: center;
+      font-size: 13px; font-weight: 700; color: #1a5f34;
+      white-space: nowrap; max-width: 150px; overflow: hidden; text-overflow: ellipsis;
       text-shadow: 0 1px 1px rgba(255,255,255,0.45), 0 1px 2px rgba(0,0,0,0.18);
     }
 
+    /* Dropdown (sem "Leave") */
     .user-dropdown {
       display: none;
       flex-direction: column;
       position: absolute;
-      top: 70px;
-      right: 0;
+      top: 70px; right: 0;
       background-color: #fff;
       border: 1px solid #ccc;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.25);
       z-index: 9999;
       overflow: hidden;
-      min-width: 180px;
+      min-width: 200px;
     }
-
     .dropdown-item {
-      padding: 10px 20px;
-      color: #333;
-      text-decoration: none;
-      font-size: 14px;
+      padding: 10px 16px;
+      color: #333; text-decoration: none; font-size: 14px;
     }
-    .dropdown-item:hover {
-      background-color: #f0f0f0;
-    }
+    .dropdown-item:hover { background-color: #f0f0f0; }
 
-    /* ====== Estrutura geral ====== */
+    /* ====== Layout da página ====== */
     .map-container {
       width: 100%;
       position: relative;
@@ -116,13 +113,19 @@
 
     header {
       width: 100%;
-      padding: 10px 0;
+      padding: 0;
       text-align: center;
       background: none;
-      margin-top: 60px; /* espaço p/ avatar */
     }
 
-    header h1 {
+    /* Espaçamento maior entre topbar e título */
+    .title-container {
+      text-align: center;
+      margin-top: 28px; /* espaço adicional sob a topbar */
+      position: relative;
+      z-index: 2;
+    }
+    .title-container h1 {
       font-size: 2.5em;
       color: #4CAF50;
       font-family: Arial, sans-serif;
@@ -130,24 +133,7 @@
       text-shadow: 1px 1px 2px #000000;
     }
 
-    .back-button {
-      display: block;
-      margin: 10px auto 20px auto;
-      padding: 10px 20px;
-      background-color: #000000;
-      color: #ffffff;
-      border: none;
-      border-radius: 8px;
-      font-size: 1em;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      text-align: center;
-      text-decoration: none;
-      width: fit-content;
-    }
-
-    .back-button:hover { background-color: #333333; }
-
+    /* Grade de atividades */
     .activity-buttons {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -156,95 +142,80 @@
       width: 100%;
       justify-content: center;
       align-items: start;
-      padding: 0 20px;
+      padding: 16px 20px 40px;
       box-sizing: border-box;
     }
-
-    .activity-button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 15px;
-      background-color: #FFFFFF;
-      border: 2px solid #4CAF50;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      text-decoration: none;
-    }
-
-    .activity-button img {
-      width: 100%;
-      height: auto;
-      max-width: 130px;
-    }
-
-    .activity-button:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    }
-
+    .activity-button,
     .teacher-resources,
     .robot-lex,
     .hannah-video {
-      grid-column: span 2;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 15px;
-      background-color: #FFFFFF;
-      border: 2px solid #4CAF50;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      display: flex; justify-content: center; align-items: center;
+      padding: 15px; background-color: #FFFFFF; border: 2px solid #4CAF50;
+      border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       text-decoration: none;
     }
-
+    .activity-button img,
     .teacher-resources img,
     .robot-lex img,
     .hannah-video img {
-      width: 100%;
-      height: auto;
-      max-width: 130px;
+      width: 100%; height: auto; max-width: 130px;
     }
-
+    .activity-button:hover,
     .teacher-resources:hover,
     .robot-lex:hover,
     .hannah-video:hover {
-      transform: scale(1.05);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+      transform: scale(1.05); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
+    .teacher-resources,
+    .robot-lex,
+    .hannah-video { grid-column: span 2; }
 
     @media (max-width: 400px) {
       .teacher-resources,
       .robot-lex,
-      .hannah-video {
-        grid-column: span 1;
-      }
+      .hannah-video { grid-column: span 1; }
+    }
+
+    /* SVG de linhas (se necessário futuramente) */
+    #linesSvg{
+      position: absolute; inset: 0;
+      width: 100%; height: 100%;
+      pointer-events: none; z-index: 0; display: block;
     }
   </style>
 </head>
 
 <body>
-  <!-- Login -->
-  <div id="loginContainer" class="login-container">
-    <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
-    <div id="userDropdown" class="user-dropdown"></div>
+  <!-- Barra superior: Back (esq) + Avatar+Nome (dir) -->
+  <div class="topbar">
+    <a href="javascript:history.back()" class="back-button">Back</a>
+
+    <div id="loginContainer" class="login-container">
+      <a href="Formulario/login.html" id="loginLink" class="login-link">Login</a>
+      <div id="userDropdown" class="user-dropdown"></div>
+    </div>
   </div>
 
   <div class="map-container">
     <header>
-      <h1>Select an Activity</h1>
-      <a href="../index.html" class="back-button">Back</a>
+      <!-- Mais espaço vem da .title-container (margin-top) -->
+      <div class="title-container">
+        <h1>Select an Activity</h1>
+      </div>
     </header>
 
     <main>
       <div class="activity-buttons" id="activity-buttons">
-        <a href="teacher/index.html" class="teacher-resources">
+        <!-- Teacher Resources (controlado por role) -->
+        <a href="teacher/index.html" class="teacher-resources" style="display:none;">
           <img src="../../imagens/resources.png" alt="Teacher Resources">
         </a>
       </div>
     </main>
+
+    <!-- Se um dia precisar -->
+    <svg id="linesSvg" xmlns="http://www.w3.org/2000/svg"></svg>
   </div>
 
   <script>
@@ -255,6 +226,7 @@
     const unit  = pathParts[2] || "Unit1";
     const container = document.getElementById("activity-buttons");
 
+    // Hannah Video (logo após Teacher Resources)
     const hannahVideo = document.createElement("a");
     hannahVideo.href = `/Atividades/HannahVideo/index.html?level=${level}&unit=${unit}`;
     hannahVideo.className = "activity-button hannah-video";
@@ -264,26 +236,28 @@
     hannahVideo.appendChild(hvImg);
     const teacherEl = container.querySelector(".teacher-resources");
     if (teacherEl) teacherEl.insertAdjacentElement("afterend", hannahVideo);
+    else container.prepend(hannahVideo);
 
+    // Demais botões (trechos)
     const buttonData = [
       { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Listening" },
-      { trecho: "trecho2", img: "../../imagens/grammar.png", alt: "Grammar" },
-      { trecho: "trecho3", img: "../../imagens/speaking.png", alt: "Speaking" },
-      { trecho: "trecho4", img: "../../imagens/writing.png", alt: "Writing" },
-      { trecho: "trecho5", img: "../../imagens/Bible.png", alt: "Bible" },
-      { trecho: "trecho6", img: "../../imagens/test.png", alt: "Test" }
+      { trecho: "trecho2", img: "../../imagens/grammar.png",   alt: "Grammar" },
+      { trecho: "trecho3", img: "../../imagens/speaking.png",  alt: "Speaking" },
+      { trecho: "trecho4", img: "../../imagens/writing.png",   alt: "Writing" },
+      { trecho: "trecho5", img: "../../imagens/Bible.png",     alt: "Bible" },
+      { trecho: "trecho6", img: "../../imagens/test.png",      alt: "Test" }
     ];
     buttonData.forEach(data => {
       const a = document.createElement("a");
       a.href = `/${level}/${unit}/fases.html?trecho=${data.trecho}`;
       a.className = "activity-button";
       const img = document.createElement("img");
-      img.src = data.img;
-      img.alt = data.alt;
+      img.src = data.img; img.alt = data.alt;
       a.appendChild(img);
       container.appendChild(a);
     });
 
+    // Robô Lex
     const robotButton = document.createElement("a");
     robotButton.href = `../../Atividades/LEX/index.html?level=${level}&unit=${unit}`;
     robotButton.className = "activity-button robot-lex";
@@ -294,7 +268,7 @@
     container.appendChild(robotButton);
   });
 
-  // === Login (bonequinha + nome + dropdown funcional) ===
+  // === Login (avatar + nome + dropdown sem "Leave") ===
   firebase.auth().onAuthStateChanged(async (user) => {
     const loginLink = document.getElementById("loginLink");
     const userDropdown = document.getElementById("userDropdown");
@@ -318,14 +292,14 @@
       const p = document.createElement("p");
       p.className = "user-name";
       p.textContent = displayName;
+
       loginLink.append(img, p);
 
-      // Conteúdo do dropdown
+      // Dropdown (sem Leave) com caminhos corrigidos
       userDropdown.innerHTML = `
-        <a href="../painel_aluno.html" class="dropdown-item">🧭 Student Dashboard</a>
-        <a href="../index.html" class="dropdown-item">🔁 Select a New Level</a>
+        <a href="../../painel_aluno.html" class="dropdown-item">🧭 Student Dashboard</a>
+        <a href="../../index.html" class="dropdown-item">🔁 Select a New Level</a>
         <a href="../index.html" class="dropdown-item">🔄 Select a New Unit</a>
-        <a href="#" id="logout" class="dropdown-item">🚪 Leave</a>
       `;
 
       // Toggle dropdown
@@ -333,15 +307,8 @@
         e.preventDefault();
         userDropdown.style.display = userDropdown.style.display === "flex" ? "none" : "flex";
       };
-
       window.addEventListener("click", (e) => {
         if (!loginLink.contains(e.target)) userDropdown.style.display = "none";
-      });
-
-      document.addEventListener("click", (e) => {
-        if (e.target.id === "logout") {
-          firebase.auth().signOut().then(() => location.reload());
-        }
       });
     } else {
       loginLink.textContent = "Login";
@@ -360,6 +327,8 @@
           const tr = document.querySelector(".teacher-resources");
           if (tr) tr.style.display = "flex";
         }
+      }).catch((error) => {
+        console.error("Erro ao obter o role do usuário:", error);
       });
     }
   });
