--- a/Level0/Unit1/index.html
+++ b/Level0/Unit1/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Select an Activity</title>
 
   <!-- Firebase -->
@@ -40,7 +40,7 @@
     .topbar {
       position: relative;
       width: 100%;
-      height: 72px; /* define uma faixa fixa para acomodar avatar+nome e o back */
+      height: 72px; /* faixa fixa para acomodar avatar+nome e o back */
     }
     .back-button {
       position: absolute;
@@ -54,7 +54,7 @@
     }
     .back-button:hover { background-color: #333; }
 
-    /* Avatar + nome (sem caixa) fixo no topo (absolute, não fixed) */
+    /* Avatar + nome (sem caixa) fixo no topo (absolute) */
     .login-container {
       position: absolute;
       top: 12px; right: 14px;
@@ -98,7 +98,7 @@
     }
     .dropdown-item:hover { background-color: #f0f0f0; }
 
-    /* ====== Layout da página ====== */
+    /* ====== Layout ====== */
     .map-container {
       width: 100%;
       position: relative;
@@ -118,7 +118,7 @@
       background: none;
     }
 
-    /* Espaçamento maior entre topbar e título */
+    /* Espaço maior entre topbar e título */
     .title-container {
       text-align: center;
       margin-top: 28px; /* espaço adicional sob a topbar */
@@ -177,14 +177,14 @@
       .hannah-video { grid-column: span 1; }
     }
 
-    /* SVG de linhas (se necessário futuramente) */
+    /* SVG (se precisar futuramente) */
     #linesSvg{
       position: absolute; inset: 0;
       width: 100%; height: 100%;
       pointer-events: none; z-index: 0; display: block;
     }
 
-    /* ====== ESTILO DE DESABILITADO (role: aluno, não liberado) ====== */
+    /* ====== ESTILO DESABILITADO (abre bloqueado e sem href) ====== */
     .disabled-btn {
       filter: grayscale(100%);
       opacity: 0.55;
@@ -194,9 +194,7 @@
       box-shadow: none !important;
       transform: none !important;
     }
-    .disabled-btn img {
-      filter: grayscale(100%);
-    }
+    .disabled-btn img { filter: grayscale(100%); }
   </style>
 </head>
 
@@ -213,7 +211,6 @@
 
   <div class="map-container">
     <header>
-      <!-- Mais espaço vem da .title-container (margin-top) -->
       <div class="title-container">
         <h1>Select an Activity</h1>
       </div>
@@ -228,27 +225,69 @@
       </div>
     </main>
 
-    <!-- Se um dia precisar -->
     <svg id="linesSvg" xmlns="http://www.w3.org/2000/svg"></svg>
   </div>
 
   <script>
   /* ==========
-     Utilidades de rota (level, unit) — calculado uma vez e reutilizado
+     Utilidades: level/unit da URL
   ========== */
   const __pathParts = window.location.pathname.split("/");
   const __level = __pathParts[1] || "Level1";
   const __unit  = __pathParts[2] || "Unit1";
+  const normLU = s => s
+    .replace(/^level(\d+)$/i, 'Level$1')
+    .replace(/^unit(\d+)$/i,  'Unit$1');
+  const __levelDB = normLU(__level);
+  const __unitDB  = normLU(__unit);
 
-  // === Botões de atividade ===
+  /* ==========
+     Helpers de criação e (des)bloqueio
+     - Criamos gated SEM href e PB; liberamos depois
+  ========== */
+  function createGatedLink({ href, className, imgSrc, imgAlt, requiresPhase }) {
+    const a = document.createElement("a");
+    a.className = className + " disabled-btn";
+    a.dataset.href = href;                 // URL fica guardada aqui
+    if (requiresPhase) a.dataset.requiresPhase = String(requiresPhase);
+
+    const img = document.createElement("img");
+    img.src = imgSrc; img.alt = imgAlt;
+    a.appendChild(img);
+
+    // Importante: não definimos a.href agora
+    return a;
+  }
+
+  function markDisabled(anchorEl, requiredPhase) {
+    if (!anchorEl) return;
+    anchorEl.classList.add("disabled-btn");
+    anchorEl.removeAttribute("href");      // garante que não navega
+    anchorEl.setAttribute("aria-disabled", "true");
+    anchorEl.title = requiredPhase
+      ? `Liberado após concluir a fase ${requiredPhase}.`
+      : `Indisponível.`;
+  }
+
+  function markEnabled(anchorEl) {
+    if (!anchorEl) return;
+    const dh = anchorEl.dataset.href;
+    if (dh) anchorEl.href = dh;            // só no enable aplicamos href
+    anchorEl.classList.remove("disabled-btn");
+    anchorEl.removeAttribute("aria-disabled");
+    anchorEl.removeAttribute("title");
+  }
+
+  /* ==========
+     Construção dos botões
+  ========== */
   document.addEventListener("DOMContentLoaded", () => {
     const container = document.getElementById("activity-buttons");
 
-    // Hannah Video (logo após Teacher Resources)
+    // Hannah Video (sem gate)
     const hannahVideo = document.createElement("a");
     hannahVideo.href = `/Atividades/HannahVideo/index.html?level=${__level}&unit=${__unit}`;
     hannahVideo.className = "activity-button hannah-video";
-    hannahVideo.dataset.kind = "hannahVideo";
     const hvImg = document.createElement("img");
     hvImg.src = "../../imagens/botoes/video_button.png";
     hvImg.alt = "Hannah Video";
@@ -257,7 +296,7 @@
     if (teacherEl) teacherEl.insertAdjacentElement("afterend", hannahVideo);
     else container.prepend(hannahVideo);
 
-    // Demais botões (trechos)
+    // Trechos
     const buttonData = [
       { trecho: "trecho1", img: "../../imagens/listening.png", alt: "Listening" },
       { trecho: "trecho2", img: "../../imagens/grammar.png",   alt: "Grammar" , requiresPhase:  8 },
@@ -266,55 +305,68 @@
       { trecho: "trecho5", img: "../../imagens/Bible.png",     alt: "Bible"   , requiresPhase: 25 },
       { trecho: "trecho6", img: "../../imagens/test.png",      alt: "Test"    , requiresPhase: 29 }
     ];
+
     buttonData.forEach(data => {
-      const a = document.createElement("a");
-      a.href = `/${__level}/${__unit}/fases.html?trecho=${data.trecho}`;
-      a.className = "activity-button";
-      a.dataset.trecho = data.trecho;
-      if (data.requiresPhase) a.dataset.requiresPhase = String(data.requiresPhase);
-      const img = document.createElement("img");
-      img.src = data.img; img.alt = data.alt;
-      a.appendChild(img);
-      container.appendChild(a);
+      const href = `/${__level}/${__unit}/fases.html?trecho=${data.trecho}`;
+
+      // trecho1 não é gated → já com href normal
+      if (!data.requiresPhase) {
+        const a = document.createElement("a");
+        a.href = href;
+        a.className = "activity-button";
+        a.dataset.trecho = data.trecho;
+
+        const img = document.createElement("img");
+        img.src = data.img; img.alt = data.alt;
+        a.appendChild(img);
+        container.appendChild(a);
+        return;
+      }
+
+      // trecho2–6: gated (sem href inicialmente)
+      const gated = createGatedLink({
+        href,
+        className: "activity-button",
+        imgSrc: data.img,
+        imgAlt: data.alt,
+        requiresPhase: data.requiresPhase
+      });
+      gated.dataset.trecho = data.trecho;
+      container.appendChild(gated);
     });
 
-    // Robô Lex (com requisito de fase 27)
-    const robotButton = document.createElement("a");
-    robotButton.href = `../../Atividades/LEX/index.html?level=${__level}&unit=${__unit}`;
-    robotButton.className = "activity-button robot-lex";
+    // Robô Lex (requer fase 27): gated
+    const robotButton = createGatedLink({
+      href: `../../Atividades/LEX/index.html?level=${__level}&unit=${__unit}`,
+      className: "activity-button robot-lex",
+      imgSrc: "../../imagens/botoes/lex_button.png",
+      imgAlt: "Robot Lex",
+      requiresPhase: 27
+    });
     robotButton.dataset.kind = "robotLex";
-    robotButton.dataset.requiresPhase = "27";
-    const robotImg = document.createElement("img");
-    robotImg.src = "../../imagens/botoes/lex_button.png";
-    robotImg.alt = "Robot Lex";
-    robotButton.appendChild(robotImg);
     container.appendChild(robotButton);
   });
 
   /* ==========
-     Funções de progresso: tenta múltiplos caminhos/formatos
+     Leitura de progresso (tenta múltiplos caminhos/formats)
      Aceita:
        - ultimaFaseLiberada: number
-       - fasesLiberadas: { [faseNumber]: true }
-       - released / liberadas / fases: objetos equivalentes
+       - lastUnlocked: number
+       - fasesLiberadas / liberadas / released / fases / unlocked: { [número]: true }
   ========== */
-  async function getUnlockedInfo(userId, level, unit) {
+  async function getUnlockedInfo(userId, levelDB, unitDB) {
     const db = firebase.database();
 
-    // Candidatos de caminhos comuns
     const candidatePaths = [
-      // por usuário fora de /usuarios
-      `/progresso/${userId}/${level}/${unit}`,
-      `/progress/${userId}/${level}/${unit}`,
-      // aninhado em /usuarios
-      `/usuarios/${userId}/progresso/${level}/${unit}`,
-      `/usuarios/${userId}/progress/${level}/${unit}`,
+      `/progresso/${userId}/${levelDB}/${unitDB}`,
+      `/progress/${userId}/${levelDB}/${unitDB}`,
+      `/usuarios/${userId}/progresso/${levelDB}/${unitDB}`,
+      `/usuarios/${userId}/progress/${levelDB}/${unitDB}`,
     ];
 
-    let lastUnlocked = null; // número
-    const unlockedSet = new Set(); // fases com true
+    let lastUnlocked = null;
+    const unlockedSet = new Set();
 
-    // Helper para absorver objetos de fases
     const absorbPhaseObject = (obj) => {
       if (!obj || typeof obj !== 'object') return;
       Object.keys(obj).forEach(k => {
@@ -332,10 +384,10 @@
         const val = snap.val();
         if (!val) continue;
 
-        // formatos possíveis
         if (typeof val.ultimaFaseLiberada === "number") {
           lastUnlocked = Math.max(lastUnlocked ?? -Infinity, val.ultimaFaseLiberada);
-        } else if (typeof val.lastUnlocked === "number") {
+        }
+        if (typeof val.lastUnlocked === "number") {
           lastUnlocked = Math.max(lastUnlocked ?? -Infinity, val.lastUnlocked);
         }
 
@@ -346,7 +398,6 @@
         absorbPhaseObject(val.unlocked);
 
       } catch (e) {
-        // silencioso; seguimos tentando outros caminhos
         console.warn("Falha ao ler", base, e?.message);
       }
     }
@@ -355,7 +406,7 @@
   }
 
   function isPhaseSatisfied(requiredPhase, lastUnlocked, unlockedSet) {
-    if (!requiredPhase) return true; // sem requisito
+    if (!requiredPhase) return true;
     const req = Number(requiredPhase);
     if (Number.isNaN(req)) return true;
     if (lastUnlocked != null && typeof lastUnlocked === "number" && lastUnlocked >= req) return true;
@@ -363,53 +414,35 @@
     return false;
   }
 
-  function markDisabled(anchorEl, requiredPhase) {
-    if (!anchorEl) return;
-    anchorEl.classList.add("disabled-btn");
-    anchorEl.setAttribute("aria-disabled", "true");
-    anchorEl.title = requiredPhase
-      ? `Liberado após concluir a fase ${requiredPhase}.`
-      : `Indisponível.`;
-  }
+  async function applyStudentGates(userId, levelDB, unitDB) {
+    const { lastUnlocked, unlockedSet } = await getUnlockedInfo(userId, levelDB, unitDB);
 
-  function markEnabled(anchorEl) {
-    if (!anchorEl) return;
-    anchorEl.classList.remove("disabled-btn");
-    anchorEl.removeAttribute("aria-disabled");
-    anchorEl.removeAttribute("title");
-  }
-
-  async function applyStudentGates(userId, level, unit) {
-    const { lastUnlocked, unlockedSet } = await getUnlockedInfo(userId, level, unit);
-
-    // Seleciona os botões relevantes
     const container = document.getElementById("activity-buttons");
     if (!container) return;
 
     const allAnchors = Array.from(container.querySelectorAll("a.activity-button, a.robot-lex, a.hannah-video"));
     for (const a of allAnchors) {
-      // Trechos com requisito
       const trecho = a.dataset.trecho;
-      const req = a.dataset.requiresPhase;
+      const req    = a.dataset.requiresPhase;
+      const kind   = a.dataset.kind;
 
-      // Robô Lex (dataset.kind = robotLex)
-      const kind = a.dataset.kind;
-
-      // Somente controlamos trecho2..6 e robotLex
+      // Controlamos trecho2..6 e robotLex
       if ((trecho === "trecho2" || trecho === "trecho3" || trecho === "trecho4" || trecho === "trecho5" || trecho === "trecho6") || kind === "robotLex") {
         if (req && !isPhaseSatisfied(req, lastUnlocked, unlockedSet)) {
-          markDisabled(a, req);
+          markDisabled(a, req);   // mantém SEM href
         } else {
-          markEnabled(a);
+          markEnabled(a);         // aplica href a partir de data-href
         }
       } else {
-        // Trecho1 e Hannah Video ficam sempre liberados
+        // trecho1 e Hannah Video sempre liberados
         markEnabled(a);
       }
     }
   }
 
-  // === Login (avatar + nome + dropdown sem "Leave") + Gates por role ===
+  /* ==========
+     Login + avatar + dropdown + roles + gates
+  ========== */
   firebase.auth().onAuthStateChanged(async (user) => {
     const loginLink = document.getElementById("loginLink");
     const userDropdown = document.getElementById("userDropdown");
@@ -453,32 +486,36 @@
         if (!loginLink.contains(e.target)) userDropdown.style.display = "none";
       });
 
-      // === Exibe Teacher Resources se for professor/proprietário
+      // Role & gates
       const role = dados.role || null;
       if (role === "professor" || role === "proprietario") {
         const tr = document.querySelector(".teacher-resources");
         if (tr) tr.style.display = "flex";
-        // Professores/proprietários: tudo liberado
+        // Libera tudo para professor/proprietário
+        document.querySelectorAll(".activity-button, .robot-lex, .hannah-video").forEach(a => markEnabled(a));
       } else if (role === "aluno") {
-        // Aplica as travas somente para aluno
+        // Teacher Resources oculto para aluno (mantém padrão)
+        // Aplica as travas somente para aluno (abre bloqueado; libera conforme progresso)
         try {
-          await applyStudentGates(user.uid, __level, __unit);
+          await applyStudentGates(user.uid, __levelDB, __unitDB);
         } catch (e) {
           console.warn("Falha ao aplicar travas de aluno:", e?.message);
         }
       } else {
-        // Role desconhecido: não trava nada (comportamento atual)
+        // Role desconhecido: comportamento padrão (não habilita Teacher Resources)
+        // Mantém gated até sabermos progresso — opcional liberar trecho1/Video:
+        document.querySelectorAll(".hannah-video, [data-trecho='trecho1']").forEach(a => markEnabled(a));
       }
 
     } else {
       // Usuário não logado
       loginLink.textContent = "Login";
       loginLink.href = "Formulario/login.html";
-      // Opcional: poderíamos travar como aluno anônimo, mas você pediu condicional ao role aluno.
+      // Sem login, não liberamos gates (previne "aluno rápido")
     }
   });
 
-  // (Mantido) — listener separado original para mostrar Teacher Resources quando logado e com role de professor/proprietário
+  // Listener adicional para manter compat com lógica original de exibir Teacher Resources
   firebase.auth().onAuthStateChanged((user) => {
     if (user) {
       const userId = user.uid;
